--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "lint": "eslint . && node --check index.js && node --check cli.js"
   },
   "dependencies": {
     "dotenv": "^17.2.4",
@@ -16,5 +17,8 @@
     "nodemon": "^3.1.11",
     "pg": "^8.18.0",
     "sequelize": "^6.37.7"
+  },
+  "devDependencies": {
+    "eslint": "^10.0.0"
   }
 }
