--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node --test",
     "dev": "nodemon index.js",
     "lint": "eslint . && node --check index.js && node --check cli.js"
   },
@@ -19,6 +19,7 @@
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
-    "eslint": "^10.0.0"
+    "eslint": "^10.0.0",
+    "supertest": "^7.2.2"
   }
 }
