--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "node --test --test-concurrency=1",
     "dev": "nodemon index.js",
-    "lint": "eslint . && node --check index.js && node --check cli.js"
+    "lint": "eslint . && node --check index.js && node --check cli.js",
+    "migration:down": "node util/rollback.js"
   },
   "dependencies": {
     "dotenv": "^17.2.4",
